--- a/all/style/index.css
+++ b/all/style/index.css
@@ -210,6 +210,82 @@ main {
 
 
 
+.carousel-wrapper {
+  position: relative;
+  width: 95%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 16 / 6;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+  display: block;
+}
+
+.carousel-text {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 15px;
+  background: rgba(0, 0, 0, 0.3);
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.arrow {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 30px;
+  color: white;
+  padding: 10px;
+  border-radius: 50%;
+  user-select: none;
+  background: none;
+  transition: transform 0.2s ease;
+  z-index: 10;
+}
+
+.left-arrow {
+  left: 2%;
+}
+
+.right-arrow {
+  right: 2%;
+}
+
+.arrow:hover {
+  transform: translateY(-50%) scale(1.2);
+}
+
+#carousel-image,
+#carousel-text {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
+
+
+
 footer {
   text-align: center;
   padding: 20px;
